--- a/src/module/index/index.html
+++ b/src/module/index/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>title</title>
+  <title></title>
 </head>
 <body>
   <div id="app"></div>
